Add swagger doc for Withdraw endpoint
