# docs/swagger.json
@@ -164,6 +164,47 @@
                     }
                 }
             }
+        },
+        "/api/v1/wallet/withdraw": {
+            "post": {
+                "description": "withdraw provided amount from user wallet",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Withdraw amount",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "JWT token",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "Withdraw query in json format",
+                        "name": "amount",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.WithdrawReq"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -188,6 +229,17 @@
                     "type": "string"
                 },
                 "to_currency": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.WithdrawReq": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "currency": {
                     "type": "string"
                 }
             }
