# internal/handlers/withdraw.go
@@ -26,6 +26,18 @@ func withdrawCheck(wallet models.Wallet, amount models.WithdrawReq) (bool, error
 	return true, nil
 }
 
+// Deposit wallet with provided amount
+//
+// @Summary      Deposit balance
+// @Description  deposit user wallet
+// @Tags         accounts
+// @Param 		 Authorization header string true "JWT token"
+// @Param		 amount body models.DepositReq true "Deposit query in json format"
+// @Accept       json
+// @Produce      json
+// @Success      200
+// @Failure      400
+// @Router       /api/v1/wallet/deposit [post]
 func (h *Handler) Withdraw(c *gin.Context) {
 	var user = models.User{}
 	var wallet = models.Wallet{}
